ADD , gitubmanager package and its repositories,controllers,services,models Added, schulder will be added later on