@@ -1,52 +1,39 @@
 plugins {
-	id("org.springframework.boot") version "3.1.2"
-	id("io.spring.dependency-management") version "1.1.3"
-	id("java")
-
-
+	java
+	id("io.freefair.lombok") version "8.12.2"
+	id("org.springframework.boot") version "3.4.3"
+	id("io.spring.dependency-management") version "1.1.7"
+	id("jacoco")
 }
 
 group = "sde.homework"
-version = "0.0.1-SNAPSHOT"
-
-tasks.test {
-	jvmArgs("-XX:+EnableDynamicAgentLoading")
-}
-
-
-java {
-	sourceCompatibility = JavaVersion.VERSION_21
-	targetCompatibility = JavaVersion.VERSION_21
-	toolchain {
-		languageVersion.set(JavaLanguageVersion.of(21))
-	}
-}
+version = "1.0-SNAPSHOT"
 
 repositories {
 	mavenCentral()
 }
 
+
+
+
 dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
 	implementation("org.springframework.boot:spring-boot-starter-web")
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-
-	compileOnly("org.projectlombok:lombok:1.18.30") // ✅ UPDATED VERSION
-	annotationProcessor("org.projectlombok:lombok:1.18.30") // ✅ UPDATED VERSION
-
-	runtimeOnly("mysql:mysql-connector-java:8.0.33")
-
-	testImplementation("org.springframework.boot:spring-boot-starter-test")
-	testImplementation("com.h2database:h2")
-
-
+	compileOnly("org.projectlombok:lombok")
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
-	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	annotationProcessor("org.projectlombok:lombok")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+	implementation("org.springframework.boot:spring-boot-starter-webflux") // We
+	implementation("mysql:mysql-connector-java:8.0.33")
+	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("net.jqwik:jqwik:1.8.0")
+	testImplementation("org.springframework.cloud:spring-cloud-starter-contract-stub-runner:4.0.3")
+	testImplementation("org.testcontainers:junit-jupiter")
+	testImplementation("org.testcontainers:mysql")
+
 }
 
-
-tasks.withType<Test> {
+tasks.test {
 	useJUnitPlatform()
 }
